feat: add twitter card

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <script src="https://cdn.jsdelivr.net/npm/matter-js@0.19.0/build/matter.min.js"></script>
   <meta charset="UTF-8">
   <title>NyaaS</title>
+  <!-- Twitter Card / OGP -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="og:url" content="https://misetteichan.github.io/nyaas/">
+  <meta property="og:title" content="NyaaS">
+  <meta property="og:description" content="にゃーん as a Service だよ。にゃーんな時にぜひ！">
+  <meta property="og:image" content="https://misetteichan.github.io/nyaas/images/card.png">
   <style>
     body {
       height: 100vh;
